pkg/kgateway/translator/gateway/testutils/outputs/traffic-policy/extauth-deep-merge.yaml
Clusters:
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_default_extauth_9091
  type: EDS
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      explicitHttpConfig:
        http2ProtocolOptions: {}
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_default_extauth_9092
  type: EDS
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      explicitHttpConfig:
        http2ProtocolOptions: {}
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_default_extauth_9093
  type: EDS
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      explicitHttpConfig:
        http2ProtocolOptions: {}
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_default_test_80
  type: EDS
- connectTimeout: 5s
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - disabled: true
          name: global_disable/ext_auth
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.set_metadata.v3.Config
            metadata:
            - metadataNamespace: dev.kgateway.disable_ext_auth
              value:
                disable: true
        - disabled: true
          name: ext_auth/default/extauth-gateway-2
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_default_extauth_9091
            statusOnError:
              code: Forbidden
        - disabled: true
          name: ext_auth/default/extauth-gateway-1
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_default_extauth_9091
            statusOnError:
              code: Forbidden
        - disabled: true
          name: ext_auth/default/extauth-listener-2
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_default_extauth_9092
            statusOnError:
              code: Forbidden
        - disabled: true
          name: ext_auth/default/extauth-route-1
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_default_extauth_9093
            statusOnError:
              code: Forbidden
        - disabled: true
          name: ext_auth/default/extauth-route-2
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_default_extauth_9093
            statusOnError:
              code: Forbidden
        - disabled: true
          name: ext_auth/default/extauth-listener-1
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
            filterEnabledMetadata:
              filter: dev.kgateway.disable_ext_auth
              invert: true
              path:
              - key: disable
              value:
                boolMatch: true
            grpcService:
              envoyGrpc:
                clusterName: kube_default_extauth_9092
            statusOnError:
              code: Forbidden
        - disabled: true
          name: ext_auth_enabled
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
            dynamicModuleConfig:
              name: rust_module
            filterConfig:
              '@type': type.googleapis.com/google.protobuf.StringValue
              value: '{}'
            filterName: rustformation
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  metadata:
    filterMetadata:
      merge.TrafficPolicy.gateway.kgateway.dev:
        extAuth:
        - gateway.kgateway.dev/TrafficPolicy/default/gateway-attachment-1
        - gateway.kgateway.dev/TrafficPolicy/default/gateway-attachment-2
  name: listener~8080
Routes:
- ignorePortInHostMatching: true
  metadata:
    filterMetadata:
      merge.TrafficPolicy.gateway.kgateway.dev:
        extAuth:
        - gateway.kgateway.dev/TrafficPolicy/default/gateway-attachment-1
        - gateway.kgateway.dev/TrafficPolicy/default/gateway-attachment-2
  name: listener~8080
  typedPerFilterConfig:
    ext_auth/default/extauth-gateway-1:
      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
      config: {}
    ext_auth/default/extauth-gateway-2:
      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
      config: {}
    ext_auth_enabled:
      '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilterPerRoute
      dynamicModuleConfig:
        name: rust_module
      filterConfig:
        '@type': type.googleapis.com/google.protobuf.StringValue
        value: '{"request":{"body":{"parseAs":"None"},"dynamicMetadata":[{"namespace":"dev.kgateway.auth_policy","key":"auth_succeeded","value":{"stringValue":"true"}}]},"response":{"body":{"parseAs":"None"}}}'
      perRouteConfigName: rustformation
  virtualHosts:
  - domains:
    - test.com
    metadata:
      filterMetadata:
        merge.TrafficPolicy.gateway.kgateway.dev:
          extAuth:
          - gateway.kgateway.dev/TrafficPolicy/default/listener-attachment-1
          - gateway.kgateway.dev/TrafficPolicy/default/listener-attachment-2
    name: listener~8080~test_com
    routes:
    - match:
        pathSeparatedPrefix: /route-0
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            extAuth:
            - gateway.kgateway.dev/TrafficPolicy/default/route-attachment-1
            - gateway.kgateway.dev/TrafficPolicy/default/route-attachment-2
      name: listener~8080~test_com-route-0-httproute-test-default-0-0-rule0-matcher-0
      route:
        cluster: kube_default_test_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        ext_auth/default/extauth-route-1:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        ext_auth/default/extauth-route-2:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        ext_auth_enabled:
          '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilterPerRoute
          dynamicModuleConfig:
            name: rust_module
          filterConfig:
            '@type': type.googleapis.com/google.protobuf.StringValue
            value: '{"request":{"body":{"parseAs":"None"},"dynamicMetadata":[{"namespace":"dev.kgateway.auth_policy","key":"auth_succeeded","value":{"stringValue":"true"}}]},"response":{"body":{"parseAs":"None"}}}'
          perRouteConfigName: rustformation
    - match:
        pathSeparatedPrefix: /route-1
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            extAuth:
            - gateway.kgateway.dev/TrafficPolicy/default/route-disable
      name: listener~8080~test_com-route-1-httproute-test-default-1-0-rule1-matcher-0
      route:
        cluster: kube_default_test_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      typedPerFilterConfig:
        ext_auth_enabled:
          '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilterPerRoute
          dynamicModuleConfig:
            name: rust_module
          filterConfig:
            '@type': type.googleapis.com/google.protobuf.StringValue
            value: '{}'
          perRouteConfigName: rustformation
        global_disable/ext_auth:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /route-2
      name: listener~8080~test_com-route-2-httproute-test-default-2-0-rule2-matcher-0
      route:
        cluster: kube_default_test_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
    typedPerFilterConfig:
      ext_auth/default/extauth-listener-1:
        '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
        config: {}
      ext_auth/default/extauth-listener-2:
        '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
        config: {}
      ext_auth_enabled:
        '@type': type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilterPerRoute
        dynamicModuleConfig:
          name: rust_module
        filterConfig:
          '@type': type.googleapis.com/google.protobuf.StringValue
          value: '{"request":{"body":{"parseAs":"None"},"dynamicMetadata":[{"namespace":"dev.kgateway.auth_policy","key":"auth_succeeded","value":{"stringValue":"true"}}]},"response":{"body":{"parseAs":"None"}}}'
        perRouteConfigName: rustformation
Statuses:
  gateways:
    default/test:
      conditions:
      - lastTransitionTime: null
        message: Successfully accepted Gateway
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Successfully programmed Gateway
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Successfully resolved all Gateway references
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      listeners:
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: http
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  httpRoutes:
    default/test:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
  policies:
    TrafficPolicy/default/gateway-attachment-1:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/gateway-attachment-2:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/listener-attachment-1:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/listener-attachment-2:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/route-attachment-1:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/route-attachment-2:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/route-disable:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: test
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
